# Valencity

./: .gitignore  README.md  codecov.yml  demo.py  demo_pii_report.html  mkdocs.yml  pyproject.toml  rename_package.py  sample.csv
.github/workflows/: main.yml
dataguard/: __init__.py
dataguard/leakage/: __init__.py  cv.py  detectors.py  splitters.py
dataguard/pii/: __init__.py  detector.py  masker.py  patterns.py
dataguard/utils/: __init__.py  logging.py
dataguard/validation/: __init__.py  drift.py  quality.py  schema.py
docs/: index.md
docs/pii/: index.md
tests/: test_async.py  test_expectations.py  test_leakage.py  test_pii.py  test_plugins.py  test_privacy.py  test_profiler.py  test_synthetic.py  test_validation.py
valencity/: __init__.py
valencity/cli/: main.py
valencity/leakage/: __init__.py  cv.py  detectors.py  splitters.py
valencity/pii/: __init__.py  async_detector.py  detector.py  masker.py  patterns.py
valencity/privacy/: __init__.py  compliance.py  differential.py
valencity/reports/: __init__.py  html.py
valencity/synthetic/: __init__.py  generators.py
valencity/utils/: __init__.py  logging.py
valencity/validation/: __init__.py  drift.py  expectations.py  profiler.py  quality.py  schema.py
