[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataguard"
version = "0.1.0"
description = "A privacy & ML safety toolkit for production ML pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "privacy",
    "pii",
    "data-leakage",
    "machine-learning",
    "data-validation",
    "ml-safety"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "dataguard[nlp,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/dataguard"
Documentation = "https://github.com/yourusername/dataguard#readme"
Repository = "https://github.com/yourusername/dataguard"
Issues = "https://github.com/yourusername/dataguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["dataguard"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=dataguard --cov-report=term-missing"
