[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valencity"
version = "0.1.4"
description = "A privacy & ML safety toolkit for production ML pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Abdallah El-Hakawati", email = "abdallahelhakawati@gmail.com" }
]
keywords = [
    "privacy",
    "pii",
    "data-leakage",
    "machine-learning",
    "data-validation",
    "ml-safety"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.0.0",
    "Faker>=10.0.0",
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "valencity[nlp,dev]",
]

[project.scripts]
valencity = "valencity.cli.main:app"

[project.urls]
Homepage = "https://github.com/ihakawati/valencity"
Documentation = "https://github.com/ihakawati/valencity#readme"
Repository = "https://github.com/ihakawati/valencity"
Issues = "https://github.com/ihakawati/valencity/issues"

[tool.hatch.build.targets.wheel]
packages = ["valencity"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=valencity --cov-report=term-missing"
